--- a/index.css
+++ b/index.css
@@ -1,1 +1,45 @@
+ .header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+ }
+ .logo{
+    width: 100px;
+ }
+
+ .nav-items > ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+    padding: 0px 20px;
+ }
+ .nav-items > ul >li {
+    padding: 10px;
+    margin: 10px;
+ }
+
+ .search-input{
+    padding: 10px;
+
+ }
+ .res-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+ }
+ .res-card{
+    width: 200px;
+    background-color: rgb(249, 247, 247);
+    padding: 5px;
+    margin: 5px;
+ }
+
+ .res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+ }
  
+
+ .res-logo{
+    width: 100%;
+ }
