--- a/index.css
+++ b/index.css
@@ -1,118 +1,7 @@
- .header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
- }
- .logo{
-    width: 100px;
- }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
- .nav-items > ul {
-    font-size: 24px;
-    display: flex;
-    list-style-type: none;
-    padding: 0px 20px;
- }
- .nav-items > ul >li {
-    padding: 10px;
-    margin: 10px;
- }
-
- .search-input{
-    padding: 10px;
-
- }
- .res-container{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px;
- }
- .res-card{
-    width: 200px;
-    background-color: rgb(249, 247, 247);
-    padding: 5px;
-    margin: 5px;
- }
-
- .res-card:hover{
-    border: 1px solid black;
-    cursor: pointer;
- }
- 
-
- .res-logo{
-    width: 100%;
- }
- .name-resturant{
-   display: flex;
-   justify-content: space-between;
- }
- .menu{
-  padding-left: 150px;
-  padding-right: 150px;
- }
-
- .menu > ul {
-   font-size: 20px;
-   display: flex;
-   list-style-type: none;
-   padding: 0px 20px;
-}
-.menu > ul >li {
-   padding: 10px;
-   margin: 10px;
-}
-.rating-card{
-   border: 2px solid;
-   margin: 20px;
-}
-.menu-card{
-   margin: 10px;
-   border-bottom: 1px solid;
-   display: flex;
-   align-items: center;
-   padding: 20px;
-}
-.menu-info{
-   flex: 1
-}
-.menu-info >h3{
-   margin-bottom: 0px;
-}
-.menu-info >h4{
-   margin: 0px;
-}
-.menu-info >p{
-   font-size: 15px;
-   color: gray;
-}
-
-.menu-img{
-   width: 118px;
-   height: 96px;
-   object-fit: cover;
-   border-radius: 6px;
-
-}
-
-.food-items{
-   position: relative;
-}
-.add-button{
-   position: absolute;
-  bottom: -10px; 
-  right: 10px; 
-  background-color:white; 
-  color: green;
-  padding: 10px 20px;
-  border: 1px solid;
-  cursor: pointer;
-  border-radius: 5px;
-}
-.add-button:hover{
-  box-shadow:
-  2px 0 4px rgba(0, 0, 0, 0.2), /* Right */
-  -2px 0 4px rgba(0, 0, 0, 0.2), /* Left */
-  0 2px 4px rgba(0, 0, 0, 0.2), /* Bottom */
-  0 -2px 4px rgba(0, 0, 0, 0.2); /* Top */;
+body {
+  color: black; /* Set your desired text color */
 }
